--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sending Email with nodejs",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "Rahul Bera",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "express-handlebars": "^3.1.0",
     "hbs": "^4.0.6",
     "mongoose": "^5.10.2",
-    "nodemailer": "^6.3.1"
+    "nodemailer": "^6.3.1",
+    "nodemon": "^2.0.4"
   }
 }
